--- a/index.html
+++ b/index.html
@@ -1262,7 +1262,7 @@
             </details>
           </header-drawer>
           <a href="/" class="header__heading-link link link--text focus-inset">
-            <div class="header__heading-logo-wrapper"><img src="https://files.sitestatic.net/banners/653b2785b4394_Cuanwin77-Slider7.jpg?v=1701515480&amp;width=600"alt="Slot Gacor" srcset="https://cdn.robotaset.com/assets/tpl/b2b7a70979/images/logo.gif?v=1701515480&amp;width=250 250w, https://cdn.robotaset.com/assets/tpl/b2b7a70979/images/logo.gif?v=1701515480&amp;width=375 375w, https://cdn.robotaset.com/assets/tpl/b2b7a70979/images/logo.gif?v=1701515480&amp;width=500 500w" width="250" height="63.96484375" loading="eager" class="header__heading-logo motion-reduce" sizes="(max-width: 500px) 50vw, 250px">
+            <div class="header__heading-logo-wrapper"><img src="https://files.sitestatic.net/banners/653b2785b4394_Cuanwin77-Slider7.jpg?v=1701515480&amp;width=600"alt="Slot Gacor" srcset="https://files.sitestatic.net/banners/653b2785b4394_Cuanwin77-Slider7.jpgv=1701515480&amp;width=250 250w, https://files.sitestatic.net/banners/653b2785b4394_Cuanwin77-Slider7.jpgv=1701515480&amp;width=375 375w, https://files.sitestatic.net/banners/653b2785b4394_Cuanwin77-Slider7.jpgv=1701515480&amp;width=500 500w" width="250" height="63.96484375" loading="eager" class="header__heading-logo motion-reduce" sizes="(max-width: 500px) 50vw, 250px">
             </div>
           </a>
           <nav class="header__inline-menu">
