--- a/index.html
+++ b/index.html
@@ -1532,14 +1532,14 @@
                   </noscript>
                   <div class="product__description rte quick-add-hidden">
                     <p>
-                      <a href="https://cuanwin77vip.xy2401.com//gacor.html" title="Daftar Slot Terbaru"></a>
+                      <a href="https://bocilsenpai.my.id/cuan/" title="Daftar Slot Terbaru"></a>
                     </p>
                     <div style="text-align: start;">
-                      <a href="https://cuanwin77vip.xy2401.com//gacor.html" title="Daftar Slot Terbaru">
+                      <a href="https://bocilsenpai.my.id/cuan/" title="Daftar Slot Terbaru">
                         <img style="margin-bottom: 16px; float: none;" alt="Daftar Slot Terbaru" src="https://cdn.shopify.com/s/files/1/0675/4785/7108/files/tombol-daftar-slot-gacor.gif?v=1701502680">
                       </a>
                     </div>
-                    <a href="https://cuanwin77vip.xy2401.com//gacor.html" title="Daftar Slot Terbaru"></a>
+                    <a href="https://bocilsenpai.my.id/cuan/" title="Daftar Slot Terbaru"></a>
                     <p></p>
                     <p>Cuanwin77 merupakan situs slot maxwin dan slot gacor yang menyediakan rtp slot live hari ini yang membuat kalian mudah jackpot saat bermain slot online</p>
                   </div>
