--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         "a": 67547857108,
         "offset": 25200,
         "reqid": "9779b774-7343-4da7-867d-c804ddab2984",
-        "pageurl": "blk.disnaker.batangkab.go.id\/Cuanwin77\/beta138-gacor\/",
+        "pageurl": "blk.disnaker.batangkab.go.id\/Cuanwin77\/CUANWIN77-gacor\/",
         "u": "fc7c1560ab15",
         "p": "product",
         "rtyp": "product",
@@ -697,7 +697,7 @@
               "id": "8060917186772",
               "title": "Rekomendasi Situs Slot Terbaru Super Gacor Gampang Maxwin \u2013 Cuanwin77",
               "untranslatedTitle": "Rekomendasi Situs Slot Terbaru Super Gacor Gampang Maxwin \u2013 Cuanwin77",
-              "url": "\/Cuanwin77\/beta138-gacor\/",
+              "url": "\/Cuanwin77\/CUANWIN77-gacor\/",
               "vendor": "Slot Gacor",
               "type": ""
             },
@@ -722,7 +722,7 @@
               "id": "8060917186772",
               "title": "Rekomendasi Situs Slot Terbaru Super Gacor Gampang Maxwin \u2013 Cuanwin77",
               "untranslatedTitle": "Rekomendasi Situs Slot Terbaru Super Gacor Gampang Maxwin \u2013 Cuanwin77",
-              "url": "\/Cuanwin77\/beta138-gacor\/",
+              "url": "\/Cuanwin77\/CUANWIN77-gacor\/",
               "vendor": "Slot Gacor",
               "type": ""
             },
@@ -932,7 +932,7 @@
               "variant": null,
               "category": "",
               "nonInteraction": true,
-              "referer": "https:\/\/blk.disnaker.batangkab.go.id\/Cuanwin77\/beta138-gacor\/"
+              "referer": "https:\/\/blk.disnaker.batangkab.go.id\/Cuanwin77\/CUANWIN77-gacor\/"
             });
           }
         });
@@ -1470,11 +1470,11 @@
                 </media-gallery>
               </div>
               <div class="product__info-wrapper grid__item scroll-trigger animate--slide-in">
-                <product-info id="ProductInfo-template--17016397889748__main" data-section="template--17016397889748__main" data-url="/Cuanwin77/beta138-gacor/" class="product__info-container product__column-sticky">
+                <product-info id="ProductInfo-template--17016397889748__main" data-section="template--17016397889748__main" data-url="/Cuanwin77/CUANWIN77-gacor/" class="product__info-container product__column-sticky">
                   <p class="product__text inline-richtext caption-with-letter-spacing">Slot Gacor</p>
                   <div class="product__title">
                     <h1>Cuanwin77 🤡 Situs Slot Maxwin Dan Slot Gacor Dengan RTP Slot Live Mudah Jackpot</h1>
-                    <a href="/Cuanwin77/beta138-gacor/" class="product__title">
+                    <a href="/Cuanwin77/CUANWIN77-gacor/" class="product__title">
                       <h2 class="h1"> Cuanwin77 🤡 Situs Slot Maxwin Dan Slot Gacor Dengan RTP Slot Live Mudah Jackpot </h2>
                     </a>
                   </div>
@@ -1555,7 +1555,7 @@
                       </span>
                     </label>
                     <div class="price-per-item__container">
-                      <quantity-input class="quantity" data-url="/Cuanwin77/beta138-gacor/" data-section="template--17016397889748__main">
+                      <quantity-input class="quantity" data-url="/Cuanwin77/CUANWIN77-gacor/" data-section="template--17016397889748__main">
                         <button class="quantity__button no-js-hidden" name="minus" type="button">
                           <span class="visually-hidden">Decrease quantity for Cuanwin77 🤡 Situs Slot Maxwin Dan Slot Gacor Dengan RTP Slot Live Mudah Jackpot</span>
                           <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" class="icon icon-minus" fill="none" viewBox="0 0 10 2">
@@ -1590,7 +1590,7 @@
                         <input type="hidden" name="id" value="44150472966356" disabled class="product-variant-id">
                         <div class="product-form__buttons">
                           <button id="ProductSubmitButton-template--17016397889748__main" type="submit" name="add" class="product-form__submit button button--full-width button--secondary" disabled>
-                            <span>DAFTARKAN AKUN SLOT GACOR DI BETA138, DAN RAIH JACKPOTNYA </span>
+                            <span>DAFTARKAN AKUN SLOT GACOR DI CUANWIN77, DAN RAIH JACKPOTNYA </span>
                             <link href="//lohan77-gacorrr.rouleur.cc/cdn/shop/t/1/assets/component-loading-spinner.css?v=116724955567955766481701499794" rel="stylesheet" type="text/css" media="all" />
                             <div class="loading__spinner hidden">
                               <svg aria-hidden="true" focusable="false" class="spinner" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
@@ -1658,7 +1658,7 @@
                       </div>
                     </details>
                   </share-button>
-                  <a href="/Cuanwin77/beta138-gacor/" class="link product__view-details animate-arrow"> View full details <svg viewBox="0 0 14 10" fill="none" aria-hidden="true" focusable="false" class="icon icon-arrow" xmlns="http://www.w3.org/2000/svg">
+                  <a href="/Cuanwin77/CUANWIN77-gacor/" class="link product__view-details animate-arrow"> View full details <svg viewBox="0 0 14 10" fill="none" aria-hidden="true" focusable="false" class="icon icon-arrow" xmlns="http://www.w3.org/2000/svg">
                       <path fill-rule="evenodd" clip-rule="evenodd" d="M8.537.808a.5.5 0 01.817-.162l4 4a.5.5 0 010 .708l-4 4a.5.5 0 11-.708-.708L11.793 5.5H1a.5.5 0 010-1h10.793L8.646 1.354a.5.5 0 01-.109-.546z" fill="currentColor">
                     </svg>
                   </a>
@@ -1700,7 +1700,7 @@
                 "@context": "http://schema.org/",
                 "@type": "Product",
                 "name": "Cuanwin77 🤡 Situs Slot Maxwin Dan Slot Gacor Dengan RTP Slot Live Mudah Jackpot",
-                "url": "https:\/\/blk.disnaker.batangkab.go.id\/Cuanwin77\/beta138-gacor\/",
+                "url": "https:\/\/blk.disnaker.batangkab.go.id\/Cuanwin77\/CUANWIN77-gacor\/",
                 "image": ["https:\/\/lohan77-gacorrr.rouleur.cc\/cdn\/shop\/files\/banner-slot-super-gacor-sekali.png?v=1701513665\u0026width=1920"],
                 "description": "\n\n\nCuanwin77 merupakan situs slot maxwin dan slot gacor yang menyediakan rtp slot live hari ini yang membuat kalian mudah jackpot saat bermain slot online",
                 "brand": {
@@ -1712,7 +1712,7 @@
                   "availability": "http://schema.org/OutOfStock",
                   "price": 25000.0,
                   "priceCurrency": "IDR",
-                  "url": "https:\/\/blk.disnaker.batangkab.go.id\/Cuanwin77\/beta138-gacor\/?variant=44150472966356"
+                  "url": "https:\/\/blk.disnaker.batangkab.go.id\/Cuanwin77\/CUANWIN77-gacor\/?variant=44150472966356"
                 }]
               }
             </script>
